# drug_deposit_dictation

./: .gitignore  README.md  STATUS.md  pyproject.toml
data/: .gitkeep
src/drug_deposit_dictation/: __init__.py  database.py  import_data.py  main.py  process_llm.py  transcribe.py
